# DanceAI

./: 2024-05-16-121658.webm  CMakeCache.txt  CMakeLists.txt  Makefile  Pose.py  PoseManager.py  README.md  cmake_install.cmake  hardcodelineas.py  main.py  myposenet.py  myposenetPruebas.py  pruebadevideobaileident.py  pruebavideo.py  pruebavideoBaile.py  puntos_data.json  sacarpuntos.py
